--- a/style.css
+++ b/style.css
@@ -1605,7 +1605,7 @@ body {
 }
 
 .header__wrapper {
-  background-image: url("/assets/scss/header/header__assets/background.png");
+  background-image: url("assets/scss/header/header__assets/background.png");
   background-size: cover;
   background-repeat: no-repeat;
   height: 562px;
@@ -1647,6 +1647,22 @@ body {
   }
   .header__div .header__point img {
     width: 60px;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 756px) {
+  .header__span-name {
+    font-size: 36px;
+  }
+}
+@media only screen and (min-width: 757px) and (max-width: 1299px) {
+  .header__span-name {
+    font-size: 36px;
+  }
+}
+@media only screen and (min-width: 1300px) {
+  .header__span-name {
+    font-size: 36px;
   }
 }
 
