--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -2,6 +2,7 @@
 @use "../mixins" as mixins;
 @use "../header/header__menu";
 @use "../logo";
+@use "theme_button";
 
 * {
     box-sizing: border-box;
@@ -22,6 +23,7 @@ body {
     background-repeat: no-repeat;
     height: 562px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
