--- a/style.css
+++ b/style.css
@@ -787,7 +787,11 @@ li.li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: auto;
+}
+@media only screen and (min-width: 601px) and (max-width: 756px) {
+  .icon {
+    margin-bottom: auto;
+  }
 }
 
 .logo_copy {
@@ -1446,7 +1450,7 @@ section.section-cases {
   color: #EF7F04;
 }
 
-.contact, .header__p-reason_font-roboto, .header__button_font-roboto {
+.contact, .header__p-reason_font-roboto, .header__button_font-roboto, .theme-button {
   font-size: 14px;
   font-family: "Roboto";
   color: white;
@@ -1465,28 +1469,28 @@ section.section-cases {
   text-transform: uppercase;
 }
 
-.header__button_font-roboto {
+.header__button_font-roboto, .theme-button {
   font-size: 16px;
   color: black;
 }
 
 @media only screen and (min-width: 757px) and (max-width: 1299px) {
-  .header__button_font-roboto {
+  .header__button_font-roboto, .theme-button {
     font-size: 14px;
   }
 }
 @media only screen and (min-width: 601px) and (max-width: 756px) {
-  .header__button_font-roboto {
+  .header__button_font-roboto, .theme-button {
     font-size: 14px;
   }
 }
 @media only screen and (min-width: 401px) and (max-width: 600px) {
-  .header__button_font-roboto {
+  .header__button_font-roboto, .theme-button {
     font-size: 14px;
   }
 }
 @media only screen and (max-width: 400px) {
-  .header__button_font-roboto {
+  .header__button_font-roboto, .theme-button {
     font-size: 14px;
   }
 }
@@ -1544,6 +1548,7 @@ section.section-cases {
 
 .menu-visible {
   display: block;
+  height: auto;
 }
 
 .logo {
@@ -1595,6 +1600,32 @@ section.section-cases {
     font-size: 14px;
   }
 }
+.header__wrapper-theme {
+  width: 343px;
+  height: 32px;
+  background-color: transparent;
+  border-radius: 34px;
+  display: flex;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  border: 2px solid #EF7F04;
+}
+
+.theme-button {
+  width: 173px;
+  height: 28px;
+  background-color: #EF7F04;
+  border: none;
+  outline: none;
+  border-radius: 100px;
+  color: white;
+}
+
+.dark {
+  background-color: transparent;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -1610,6 +1641,7 @@ body {
   background-repeat: no-repeat;
   height: 562px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
