fix: a lot of things: new buttons with backgrounds, new animated svg

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -3,6 +3,7 @@
 // VAR: sizes
 $global-width: 1247px;
 $global-margin: 122px;
+$opacity-dark-theme: 14%;
 
 // VAR: font-sizes
 $font-h2-size: 24px;
@@ -18,6 +19,8 @@ $font-orange: #EF7F04;
 $background-color: #F2F2F2;
 $background-button: #3B3A63;
 $background-color-footer: #2F2F51;
+$background-dark: #4C5772;
+$background-header: #1A1D25;
 
 // extands
 %font-h2 {
