--- a/assets/scss/main/_components.scss
+++ b/assets/scss/main/_components.scss
@@ -9,7 +9,7 @@
     width: 144px;
     height: 38px;
     outline: none;
-    background-color: #fff;
+    background-color: transparent;
 }
 
 button.button {
